k8s/dev/deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
  namespace: firsteps-dev
spec:
  selector:
    matchLabels:
      app: ms-auth
  replicas: 1
  template:
    metadata:
      labels:
         app: ms-auth
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: ms-auth
           image: ghcr.io/juangomez0303/ms-authentication:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth
  namespace: marshando-backend-dev
spec:
#  type: NodePort
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
