k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ms-auth
   namespace: firsteps-dev
spec:
   ingressClassName: public
  #  tls:
  #      - hosts:
  #         - marshando.dynaco.co
  #        secretName: marshando.dynaco.co
   rules:
   - host:
     http:
       paths:
       - path: /api/ms-auth
         pathType: Prefix
         backend:
           service:
             name: ms-auth
             port:
               number: 8080
